Clean up usages of commons-io